# math4games

./: #backgitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  Math for games.docx  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  math4games.sln  test.cpp
Test/: Test.sln
Test/Debug/: Test.ilk  lnk{28ACC665-C8E8-4D4C-9289-CDAB632B2DFA}.tmp
Test/Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters
Test/Test/Debug/: Test.pch  vc140.idb  vc141.idb
Test/Test/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Test/Test/math4games/: matrix4.h  vector2.h  vector3.h  vector4.h
Test/ipch/TEST-ff8986d8/: TEST-108d03ac.ipch
include/math4games/: common.h  debug.h  math.h  math4games.h  matrix.backup.h  matrix.h  matrix2.h  matrix3.h  matrix4.h  point.h  quaternion.h  transform.h  transform2.h  transformation.h  vector.h  vector2.h  vector3.h  vector4.h
testlinux/test/: CMakeLists.txt  main.cpp
testlinux/test/.kdev4/: test.kdev4
